<resources>
    <string name="app_name">cpsc6138-assignment3-timer-and-threads</string>
    <string name="goToCalculator">Go to Calculator</string>
    <string name="goToTimer">Go to Timer</string>
    <string name="mainActivityHeading"><![CDATA[Jonathon Goodson\nCPSC 6138\nAssignment 3 - Timers and Threads]]></string>
    <string name="delete">Delete</string>
    <string name="div">/</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="backToMenu">Go Back To Main Menu</string>
    <string name="timer">Timer</string>
    <string name="_00">00</string>
    <string name="Clear">Clear</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="timerFinished">Timer Finished</string>
</resources>
