<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:text="@string/mainActivityHeading"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="65dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/goToCalculator"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="231dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/goToTimer"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="322dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>